# PromocoesCOMAER

./: .env.example  .gitignore  AI_RULES.md  README.md  pyproject.toml  requirements.txt
ai/: README.md  architecture.md  coding-standards.md  project.md
ai/domain/: glossary.md
backend/app/: main.py
database/migrations/: V001__create_schemas.sql  V002__create_config_tables.sql  V003__create_raw_t_pesfis_comgep_dw.sql  V010__seed_business_rules.sql
database/seed/: business_rules.sql  postos.sql  vagas.sql
database/seeds/: quadros.sql
database/snapshots/: README.md  t_pesfis_comgep_dw.dump
docs/: CHANGELOG.md  CONTRIBUTING.md  DOMAIN.md  Documento_Iniciacao_PromocoesCOMAER_v02.docx  Documento_Iniciacao_PromocoesCOMAER_v04_Sprint4.docx  README.md  api.md  architecture.md  database.md  etl.md  frontend.md  roadmap.md  simulation.md  vision.md
docs/api/: authentication.md  endpoints.md  errors.md
docs/architecture/: architecture.md  backend.md  database.md  deployment.md  frontend.md  infrastructure.md
docs/database/: etl.md  migrations.md  modelo_fisico.md  snapshots.md
docs/decisions/: ADR-0001.md  ADR-0002.md  ADR-0003.md
docs/development/: ambiente.md  coding-style.md  getting-started.md  git-flow.md  scripts.md  vscode-extensions.txt
docs/domain/: domain-model.md  glossary.md  regras_promocao.md  vision.md
docs/operations/: backup.md  logs.md  monitoramento.md  restore.md
frontend/: angular.json  package-lock.json  package.json
scripts/: export-vscode-extensions.sh  install-vscode-extensions.sh  start.sh  uninstall-vscode-extensions.sh
(+127 files in other folders)
